add vector api for benchmarking